# handson-mlp

./: .dockerignore  .gitignore  01_the_machine_learning_landscape.ipynb  02_end_to_end_machine_learning_project.ipynb  03_classification.ipynb  04_training_linear_models.ipynb  05_decision_trees.ipynb  06_ensemble_learning_and_random_forests.ipynb  09_artificial_neural_networks.ipynb  10_neural_nets_with_pytorch.ipynb  11_training_deep_neural_networks.ipynb  13_processing_sequences_using_rnns_and_cnns.ipynb  14_nlp_with_rnns_and_attention.ipynb  15_transformers_for_nlp_and_chatbots.ipynb  16_vision_and_multimodal_transformers.ipynb  17_speeding_up_transformers.ipynb  18_autoencoders_gans_and_diffusion_models.ipynb  19_reinforcement_learning.ipynb  Appendix_A_autodiff.ipynb  Appendix_B_mixed_precision_and_quantization.ipynb  Appendix_C_support_vector_machines.ipynb  Appendix_D_relative_positional_encoding.ipynb  Appendix_E_state_space_models.ipynb  CHANGES.md  INSTALL.md  Micrograd.ipynb  README.md  apt.txt  colab_startup.ipynb  environment.yml  extra_ann_architectures.ipynb  extra_support_vector_machines.ipynb  index.ipynb  math_differential_calculus.ipynb  math_linear_algebra.ipynb  pyproject.toml  tools_matplotlib.ipynb  tools_numpy.ipynb  tools_pandas.ipynb
docker/: Dockerfile  Dockerfile.cpu  README.md
src/: dummy.py
