[project]
name = "handson-mlp"
version = "1.0.0"
description = "A series of Jupyter notebooks that walk you through the fundamentals of Machine Learning and Deep Learning in Python using Scikit-Learn and PyTorch."
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "accelerate",
    # "box2d" installed separately because there's no binary on some platforms
    "datasets",
    "diffusers",
    "google-genai",
    "gymnasium[atari]",
    "joblib",
    "jupyter",
    "jupyterlab",
    "lion-pytorch",
    "matplotlib",
    "nbdime",
    "nltk",
    "numexpr",
    "numpy",
    "onnx",
    "optuna",
    "pandas",
    "peft",
    "pillow",
    "xgboost",
    "pygame",
    "graphviz",
    "torch",
    "scikit-learn",
    "scipy",
    "sentence-transformers",
    "sentencepiece",
    "stable-baselines3",
    "statsmodels",
    "tensorboard",
    "torchaudio",
    "torchmetrics",
    "torchvision",
    "transformers",
    "trl",
    "ultralytics",
    "urlextract",
    "widgetsnbextension",
    "ale-py>=0.11.2",
    "einops>=0.8.1",
]
